2010-03-31  Richard Guenther  <rguenther@suse.de>

PR middle-end/43600
	* cgraphunit.c (cgraph_output_in_order): Do not allocate
	temporary data on stack.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157867 138bc75d-0d04-0410-961f-82ee72b054a4